 CHANGELOG
=========

Version Next
------------



Version 0.0.5
-------------

* Switched dependency to Pillow instead of PIL.
* Converted the docs to rst (thanks tomscytale!)
* Huge performance improvements (thanks Andrea Bravetti!)
* Bugfixes.

Version 0.0.4
-------------

* Added a <pdf:pagecount/> tag to write the total number of pages.
* The <pdf:barcode/> tag now accepts a fontsize argument for the human-readable
  font.
* Various bugfixes and enhancements


LEGACY
======

The following changelog entries were relevant before the maintainer change.

********************************************************************************
  "I would like to thank the people mentioned in brackets in this change log
  very much for their help and support!" - Dirk
********************************************************************************

Version 3.0.33, 2010-06-16
- NEW: Changed license to Apache License 2.0, now completely Open Source 
       without any charging. Feel free to continue or for this project.
- FIX: Empty cells now collapse

Version 3.0.32, 2009-05-08

- NEW: New command line option '--base' to specify base path if input comes
       via STDIN
- FIX: The 'keep in frame' feature for tables did not work inside of static 
       frames (Arun Shanker Prasad)
- FIX: Small typos 

Version 3.0.31, 2009-05-04

- NEW: Support for Style "list-style-image", also supports "zoom"
- NEW: Temporary files internally are written to disk if they exceed a certain size
- NEW: Font names can now also read from external URL
- UPD: Modified pdfjoiner.py demo
- FIX: Custom font image problem still appeared
- FIX: Single image in a block issue
- FIX: Randomly used wrong images is fixed using a workaround for the bug
       in Reportlab _digester routine
- FIX: Empty tables error (Davide Moro)
- FIX: Fallback to urllib2 if httpdlib fails

Version 3.0.30, 2009-03-27

- NEW: Default CSS now hides content of <noscript>
- UPD: Better whitespace handling in RL Paragraph